[package]
name = "game"
version = "0.1.0"
authors = ["catsanddo <travisscoville@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12"

[dependencies.sdl2]
version = "0.34"
default-features = true
features = ["image"]
